--- a/HW5/hw5_solution.tex
+++ b/HW5/hw5_solution.tex
@@ -3,6 +3,7 @@
 \documentclass[english]{article}
 \usepackage[T1]{fontenc}
 \usepackage[latin9]{inputenc}
+\usepackage{float}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{esint}
@@ -63,22 +64,54 @@
 \usepackage{babel}
 \begin{document}
 
-\subsection*{Problem 1 (graded by Dunzhu \& Toby) X points}
+\subsection*{Problem 1 50 points}
 
 
-\subsubsection*{(a) - 10 points}
+\subsubsection*{(a) Alternative (exact Hessian) 25 points}
+
+\begin{figure}[H]
+\begin{minipage}[t]{0.45\columnwidth}%
+\includegraphics[bb=100bp 100bp 512bp 692bp,scale=0.5]{exact_hessian_approx_hessian_compare}%
+\end{minipage}\hfill{}%
+\begin{minipage}[t]{0.45\columnwidth}%
+\includegraphics[bb=100bp 100bp 512bp 692bp,scale=0.5]{exact_hessian_approx_hessian_compare_2}%
+\end{minipage}\caption{Left: In one example where initial guess is not very close to solution,
+using exact Hessian takes more iterations than using approximate Hessian.
+Right: In another example, using exact Hessian donot converge while
+using approximate Hessian converges. }
+
+
+\begin{minipage}[t]{0.45\columnwidth}%
+\includegraphics[bb=100bp 100bp 512bp 692bp,scale=0.5]{convergence_comparison_appro_exact}%
+\end{minipage}\hfill{}%
+\begin{minipage}[t]{0.45\columnwidth}%
+\includegraphics[bb=100bp 100bp 512bp 692bp,scale=0.5]{convergence_number_iteration_comparison_appro_exact}%
+\end{minipage}\caption{Left:Convergence comparison of approximate Hessian and exact one.
+Dark blue region is where both methods donot converge. Light blue
+region is where approximate Hessian converge but exact Hessian don't.
+Yellow region is where both methods converge. Right:Dark blue region
+is where approximate Hessian takes less iterations. Light blue region
+is where both methods take same number of iterations. Yellow(very
+small region close to the solution) region is where exact Hessian
+take less number of iterations.}
+\end{figure}
+
+
+The conclusion is that when using exact Hessian, the initial guess
+has to be closer to the solution so as to make the iteration converge.
+If the initial guess is not very close to the solution, approximate
+Hessian will be more robust which means both a better chance of finding
+the optimal solution and less iterations. Only when initial guess
+is very close to solution, exact Hessian will take equal or less iterations
+than approximate Hessian. 
 
 
 \subsection*{\tiny
 \lstinputlisting{./compute_gradient_approx_hess2.m}
 \normalsize}
 
-\includegraphics[bb=100bp 100bp 500bp 600bp,scale=0.8]{exact_hessian_approx_hessian_compare}
 
-\includegraphics[bb=100bp 100bp 500bp 600bp,scale=0.8]{exact_hessian_approx_hessian_compare_1}
-
-
-\subsubsection*{(b) - 10 points}
+\subsubsection*{(b) 25 points}
 
 
 \subsubsection*{(b.i)}
@@ -112,14 +145,19 @@ So
 
 Assume uniform prior, then 
 \begin{eqnarray*}
-P(x,y|d) & \propto & P(d|x,y)=\exp-F(x,y)\\
- & = & \exp\left(-F(x_{0},y_{0})-gradF|_{x_{0},y_{0}}\cdot(x-x_{0},y-y_{0})'-\frac{1}{2}(x-x_{0},y-y_{0})H|_{x_{0},y_{0}}(x-x_{0},y-y_{0})'\right)
+P(x,y|d) & \propto & P(d|x,y)=\exp\left(-F(x,y)\right)\\
+ & = & \exp\left(-F(x_{0},y_{0})-\nabla F|_{x_{0},y_{0}}\cdot[\begin{array}{cc}
+x-x_{0} & y-y_{0}\end{array}]'-\frac{1}{2}\left[\begin{array}{cc}
+x-x_{0} & y-y_{0}\end{array}\right]H|_{x_{0},y_{0}}[\begin{array}{cc}
+x-x_{0} & y-y_{0}\end{array}]'\right)
 \end{eqnarray*}
 
 
-Since at $(x_{0},y_{0})$, $gradF=0$, thus 
+Since at $(x_{0},y_{0})$, $\nabla F=0$, thus 
 \begin{eqnarray*}
-P(x,y|d) & \propto & \exp\left(-\frac{1}{2}(x-x_{0},y-y_{0})H|_{x_{0},y_{0}}(x-x_{0},y-y_{0})'\right)
+P(x,y|d) & \propto & \exp\left(-\frac{1}{2}\left[\begin{array}{cc}
+x-x_{0} & y-y_{0}\end{array}\right]H|_{x_{0},y_{0}}[\begin{array}{cc}
+x-x_{0} & y-y_{0}\end{array}]'\right)
 \end{eqnarray*}
 
 
@@ -129,11 +167,15 @@ H=\begin{pmatrix}A & B\\
 B & C
 \end{pmatrix}
 \end{eqnarray*}
+
+
 thus the joint pdf will be
 
 \begin{eqnarray*}
 f(x,y)=K\exp\left(-\frac{1}{2}[A(x-x_{0})^{2}+2B(x-x_{0})(y-y_{0})+C(y-y_{0})^{2}]\right)
 \end{eqnarray*}
+
+
 where $K$ is the constant that normalize the pdf, to get it, we have
 
 \begin{eqnarray*}
@@ -160,7 +202,9 @@ E[x-x_{0}] & = & \int_{-\infty}^{\infty}dy\int_{-\infty}^{\infty}dx\quad(x-x_{0}
  & \propto & \int_{-\infty}^{\infty}dy\quad y\exp\left(-\frac{1}{2}[(C-B^{2}/A)y^{2}]\right)\\
  & = & 0
 \end{eqnarray*}
-So similarly $E[y]=y_{0}$.
+
+
+Similarly $E[y]=y_{0}$.
 
 Thus 
 \begin{eqnarray*}
@@ -172,6 +216,8 @@ Thus
  & = & \frac{2\pi K}{(A-B^{2}/C)\sqrt{AC-B^{2}}}\\
  & = & \frac{C}{AC-B^{2}}
 \end{eqnarray*}
+
+
 Similarly 
 \begin{eqnarray*}
 \sigma_{y}^{2} & = & \frac{A}{AC-B^{2}}
@@ -187,27 +233,31 @@ Similarly
 \end{eqnarray*}
 
 
-Note that 
+In sum 
 \begin{eqnarray*}
-\begin{pmatrix}A & B\\
+\boldsymbol{H}^{-1}=\begin{pmatrix}A & B\\
 B & C
-\end{pmatrix}^{-1}=\frac{1}{AC-B^{2}}\begin{pmatrix}C & -B\\
+\end{pmatrix}^{-1} & = & \frac{1}{AC-B^{2}}\begin{pmatrix}C & -B\\
 -B & A
-\end{pmatrix}
+\end{pmatrix}\\
+ & = & \left(\begin{array}{cc}
+\sigma_{x}^{2} & \sigma_{xy}^{2}\\
+\sigma_{xy}^{2} & \sigma_{y}^{2}
+\end{array}\right)
 \end{eqnarray*}
-Thus we get what we want.
 
 
-\subsection*{Problem 2 (graded by Dunzhu \& Toby) 20 points}
+
+\subsection*{Problem 2 50 points}
 
 
-\subsubsection*{(b) (10 points)}
+\subsubsection*{(b) (25 points)}
 
 Here are some topics people mentioned about the ABT book: 
 \begin{itemize}
 \item Appendix A, background knowledge 
 \item Number of data points vs number of model parameter, overdetermined,
-underdeterminined, mixed determinied 
+underdetermined, mixed determined 
 \item MAP and Bayes' theorem 
 \item L1 norm is better when existence of outlier 
 \item difficulty in inverse: existance, uniqueness, and instability 
@@ -223,13 +273,13 @@ is more clear, because $P(d|m)$ apprears to be a function of $d$,
 where in fact we want it to be a function of $m$. 
 \end{itemize}
 
-\subsubsection*{(c) (10 points)}
+\subsubsection*{(c) (25 points)}
 
 Here are some topics people mentioned: 
 \begin{itemize}
 \item When estimating $\sigma^{2}$, devided by $N-1$ instead of $N$ 
 \item Confused about $J(m)$ and $G(m)$, it's really the same thing, Jacobian 
-\item class did a better job of describing prior 
+\item Class did a better job of describing prior 
 \item Class and ABT does not cover the case when prior is a given range 
 \item numerical calculation of derivative when it's hard to do it analytically 
 \item any method for finding global minimum? \end{itemize}
